feat: added verify-reset-password-token route
